src/objects/HON_Account_Plan__c/HON_Account_Plan__c.object-meta.xml
<CustomObject>
    <label>HON Account Plan</label>
    <nameField>
        <label>HON Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HON Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>