src/objects/HON_Account_Plan__c/fields/Cultural_Compatibility__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Compatibility__c</fullName>
    <inlineHelpText>The extent to which the customer&apos;s culture resembles that of your company; exhibited by how it operates its business and its behaviors, practices and values.</inlineHelpText>
    <label>Cultural Compatibility</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>