src/objects/HON_Account_Plan__c/fields/Stakeholder_Map_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Map_Image_URL__c</fullName>
    <label>Stakeholder Map Image URL</label>
    <type>Url</type>
</CustomField>