src/objects/HON_Account_Plan__c/fields/The_Customer_s_Perception_of_our_Compa__c.field-meta.xml
<CustomField>
    <fullName>The_Customer_s_Perception_of_our_Compa__c</fullName>
    <inlineHelpText>The Account&apos;s overall perception of your reputation and the value your bring to the market.</inlineHelpText>
    <label>The Customer&apos;s Perception of our Compa</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>