src/objects/HON_Account_Plan__c/validationRules/Primary_or_Incumbent_Maximum.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_or_Incumbent_Maximum</fullName>
    <active>false</active>
    <errorConditionFormula>Incumbent_Primary_Competitor_Count__c &gt; 1</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Only one competitor can be set as the incumbent or primary.</errorMessage>
</ValidationRule>